--- a/css/default.css
+++ b/css/default.css
@@ -65,7 +65,11 @@ a:active {
 /* Main Menu - Start */
 
 .mainMenu {
-	background-color:blue;
+	background-color:#A5F2F3;
+}
+
+.mainMenuTitle{
+	color:#FFF;
 }
 
 /* Main Menu - End */
@@ -74,10 +78,6 @@ a:active {
 
 .optionsMenu {
 	background-color:grey;
-}
-
-.mainMenuTitle{
-	color:#FFF;
 }
 
 /* Options Menu - End */
