--- a/css/default.css
+++ b/css/default.css
@@ -70,7 +70,17 @@ a:active {
 
 .mainMenuTitle{
 	color:#FFF;
-	padding-top:20px;
+	padding-top:30px;
+	padding-bottom:10px;
+}
+
+.menuButtons .button-2 {
+    background: rgba(63,208,212,1) !important;
+    color: #fff;
+    box-shadow: 0 6px rgba(63,208,212,0.7);
+    -webkit-transition: none;
+    -moz-transition: none;
+    transition: none;
 }
 
 /* Main Menu - End */
