--- a/css/default.css
+++ b/css/default.css
@@ -81,6 +81,9 @@ a:active {
     -webkit-transition: none;
     -moz-transition: none;
     transition: none;
+    height: 42px;
+	padding: 8px 40px;
+	margin: 5px 5px;
 }
 
 .menuButtons .button-2:hover {
