--- a/css/default.css
+++ b/css/default.css
@@ -108,10 +108,10 @@ a:active {
 
 /* in Game - End */
 
-/* in Game - Start */
+/* Credits - Start */
 
 .credits {
 	background-color:blue;
 }
 
-/* in Game - End */
+/* Credits - End */
