--- a/css/default.css
+++ b/css/default.css
@@ -39,13 +39,17 @@ a:active {
 	color: #333;
 }
 
+.hidden {
+	display:none;
+}
+
 .container {
 	width:100%;
 	height:100%;
 }
 
 .displayedView {
-	display: none;
+	display:none;
 }
 
 .gameDiv .active {
@@ -68,7 +72,7 @@ a:active {
 	background-color:#86d6d8;
 }
 
-.mainMenuTitle{
+.mainMenuTitle {
 	color:#FFF;
 	padding-top:30px;
 	padding-bottom:10px;
