--- a/css/default.css
+++ b/css/default.css
@@ -115,6 +115,14 @@ a:active {
 	background-color:red;
 }
 
+#GameContainer{
+	width:100%;
+	height:60%;
+	background-color:blue;
+	border: 5px solid #FFF;
+	border-radius: 5px;
+}
+
 /* in Game - End */
 
 /* Credits - Start */
