--- a/css/default.css
+++ b/css/default.css
@@ -123,6 +123,18 @@ a:active {
 	border-radius: 5px;
 }
 
+/* Shapes - Start */
+
+.triangle{
+	width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-bottom: 50px solid #555;
+}
+
+/* Shapes - End */
+
 /* in Game - End */
 
 /* Credits - Start */
