--- a/css/default.css
+++ b/css/default.css
@@ -135,6 +135,12 @@ a:active {
 
 /* Shapes - Start */
 
+.circle{
+	border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+    background-color:red;
+}
+
 .triangle{
 	width: 100%;
     height: 100%;
@@ -142,6 +148,12 @@ a:active {
 
     /* The points are: centered top, left bottom, right bottom */
     clip-path: polygon(50% 0, 0 100%, 100% 100%);
+}
+
+.square{
+	width: 100%;
+    height: 100%;
+    background-color:red;
 }
 
 /* Shapes - End */
