--- a/css/default.css
+++ b/css/default.css
@@ -119,8 +119,8 @@ a:active {
 	width:100%;
 	height:60%;
 	min-height:210px;
-	background-color:blue;
-	border: 5px solid #FFF;
+	background-color:#FFF;
+	border: 5px solid black;
 	border-radius: 5px;
 }
 
